--- a/css/responsive.css
+++ b/css/responsive.css
@@ -177,7 +177,7 @@
       flex-direction: column;
       align-items: center;
     }
-    #airdrop .airdrop-item a{
+    #presale .presale-item a{
       display: block;
       margin: auto;
       width: 100%;
